# npi-surface-check

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
src/npi_surface_check/: __init__.py  cli.py  nppes.py  surface.py
tests/: test_cli.py  test_surface.py
